--- a/style.css
+++ b/style.css
@@ -1,85 +1,150 @@
-*{
+body
+{
 	margin: 0;
 	padding: 0;
-	font-family: Century Gothic;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	background: #000;
+	font-family: consolas;
 }
-header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../2.jpg);
-	height: 100%;
-	background-size: cover;
-	background-position: center;
-}
-ul{
-	float: right;
-	list-style-type: none;
-	margin-top: 25px;
-}
-ul li{
-	display: inline-block;
-}
-ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 5px 20px;
-	border: 3px solid transparent;
-	transition: 0.7s ease;
-}
-ul li a:hover{
-	background-color: #fff;
-	color: #000;
-}
-ul li.active a{
-	background-color: #fff;
-	color: #000;
-}
-ul li {color: #ff8833;
-	
-	border: 3px solid transparent;
-   box-shadow: 0 0 10px #4B0082,0 0 40px #4B0082,0 0 80px #4B0082;
-    transition: 1s;
-}
-
-
-.logo img{
-	float: left;
-	width: 150px;
-	height: auto;
-}
-.main{
-	max-width: 12000px;
-	margin: auto;
-}
-.title{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
-.title h1{
-	color: #fff;
-	font-size: 70px;
-}
-.title h1{color: #ff8833;
-	
-	box-shadow: 0 0 10px #4B0082,0 0  10px #4B0082 ,0 0 10px #4B0082;
-    transition: 1s;
-}
-.button{
-	position: absolute;
-	top: 64%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
-.btn
+.container
 {
-	border: 1px solid #fff;
-	padding: 3px 30px;
+	position: relative;
+	width: 450px;
+	min-height: 300px;
+	background: rgba(255,255,255,0.05);
+	box-shadow: 0 5px 15px rgba(0,0,0,1);
+}
+.container:before
+{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: rgba(255,255,255,0.1);
+	pointer-events: none;
+}
+.container:after
+{
+	content: '';
+	position: absolute;
+	top:-5px;
+	left: -5px;
+	right: -5px;
+	bottom: -5px;
+	background: linear-gradient(45deg,#ff0047,#6eff00);
+	pointer-events: none;
+	animation: animate 10s linear infinite;
+}
+@keyframes animate 
+{
+	0%
+	{
+		filter: blur(60px) hue-rotate(0deg);
+	}
+	100%
+	{
+		filter: blur(60px) hue-rotate(360deg);
+	}
+}
+
+
+.form
+{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding: 40px;
+	box-sizing: border-box;
+	z-index: 1;
+}
+.form h2
+{
+	margin: 0;
+	padding: 0;
 	color: #fff;
-	float: left;
-	text-decoration: none;
-	transition: 0.6s ease;
+	font-size: 24px;
 }
-.btn:hover{
-	background-color: #fff;
+.form .inputbox 
+{
+	width: 100%;
+	margin-top: 20px;
+}
+.form .inputbox input
+{	 
+	width: 100%;
+	background: transparent;
+	border: none;
+	border-bottom: 3px solid #fff;
+	outline: none;
+	font-size: 18px;
+	color: #fff;
+	padding: 5px 0;
+	font-family: consolas;
+}
+::placeholder
+{
+	color: #eee;
+}
+.form .inputbox input[type="submit"]
+{
+	background: #fff;
 	color: #000;
+	border: none;
+	font-weight: 900;
+	max-width: 100px;
+	cursor: pointer;
 }
+.form p
+{
+	color: #eee
+}
+.form p a
+{
+	color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
